fix video control panel elements align

--- a/css/video.less
+++ b/css/video.less
@@ -220,13 +220,6 @@ fonts to show/hide properly.
 .amp-video-skin .vjs-control:before {
   font-family: VideoJS;
   font-size: 1.5em;
-  line-height: 2;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  text-align: center;
   text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
 }
 
